--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -31,17 +31,7 @@
                 </div>
                 <!-- template start -->
                 <div id="inputDiv" class="col-md-12">
-                    <div class="input-group mt-2 mb-2 w-75"> <button class="btn btn-outline-secondary"
-                            onclick="removeInput(this, 1)" type="button"><i class="fa fa-minus"></i></button>
-                        <p name="set_${inputnum}" class="form-control" value="${value}">${value}</p>
-                    </div>
-                        <div class="uk-inline">
-                            <button class="uk-form-icon" onclick="removeInput(this, 1)" uk-icon="icon: minus"></button>
-                            <!-- <input class="uk-input" type="text"> -->
-                            <p name="set_${inputnum}" class="form-control" value="${value}">${value}</p>
-
-                        </div>
-                    </div>
+                </div>
                 <br>
                 <br>
                 <!-- template end -->
@@ -55,25 +45,27 @@
                     {{ form8.price }}
                     <span class="input-group-text ">.00</span>
                 </div>
-                <table class="table table-hover border text-left  ">
-                    <tbody>
+                <table class="uk-table uk-table-justify uk-table-divider" id="pricing">
+                    <thead>
                         <tr>
-                            <th scope="row">Премет</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <th class="uk-width-auto">Комплектация</th>
+                            <th class="uk-width-auto">Бренд</th>
+                            <th class="uk-width-auto">Цена</th>
                         </tr>
-                        <tr>
+                    </thead>
+                    <tbody id="table">
+                        <!-- <tr class="tcomplectations">
+                            <th scope="row">Комплектация</th>
+                        </tr>
+                        <tr class="tbrend">
                             <th scope="row">Бренд</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
                         </tr>
-                        <tr>
+                        <tr class="tprice">
                             <th scope="row">Код</th>
                             <td>@twitter</td>
-                        </tr>
+                        </tr> -->
                     </tbody>
+                        
                 </table>
             </div>
             <!-- end of block 2 -->
@@ -177,9 +169,28 @@
         keynum = 0,
         currentTab = 0;
 
-    function addComplectation(el) {
-
-        console.log("creators/goods/search/" + el.value)
+    function recalc(el){
+        let price = parseInt(document.getElementById('priceInput').value);
+        let form = document.getElementById('final_price');
+        form.innerHTML = price + price*0.1;
+    }
+    
+    function addComplectation() {
+        let arr = document.getElementsByClassName('complectations');
+        let brand = document.getElementById('brand').value;
+        let form = document.getElementById('table')
+        for (let i = 0; i < arr.length; ++i){
+            // let text = document.createTextNode(arr[i].innerHTML);
+            let table = document.getElementById('table');
+            let table_values = table.insertRow(-1).insertCell(0)
+            console.log(i)
+            let newText = document.createTextNode(arr[i].innerHTML);
+            table_values.appendChild(newText);
+            if (i == 0){
+                form.children[0].innerHTML += `<td> ${brand} </td> <td id="final_price">  </td>`;
+            }
+            document.getElementsByTagName('td')[i].className += 'uk-text-truncate'
+        }
     }
 
     function addInput(el) {
@@ -189,7 +200,7 @@
             input.placeholder = "";
             let value = document.getElementById('inputvalue').value;
             var $inputGroup =
-                `<div class="input-group mt-2 mb-2 w-75"> <button class="btn btn-outline-secondary" onclick="removeInput(this, 1)" type="button"><i class="fa fa-minus"></i></button> <p name="set_${inputnum}" class="form-control" value="${value}">${value}</p></div>`;
+                `<div class="uk-inline" style="display: block; margin: 2% 0"> <button class="uk-form-icon" onclick="removeInput(this, 1)" uk-icon="icon: minus" style="border-right: 1px solid #e5e5e5;"></button> <p class="uk-input complectations" type="text" value="${value}" style="margin-left: 5px">${value}</p></div>`;
             // <button class="btn btn-outline-secondary" onclick="changeInput(this)" type="button"><span class="material-icons"> mode_edit </span></button>
             document.getElementById("inputDiv").insertAdjacentHTML("afterbegin", $inputGroup);
             input.value = "";
@@ -266,7 +277,11 @@
             x[n].style.display = "block";
             if (n === 0) {
                 document.getElementById("prevBtn").style.display = "none";
-            } else {
+            } else if(n === 1){
+                addComplectation()
+                document.getElementById("prevBtn").style.display = "inline";
+            } 
+            else {
                 document.getElementById("prevBtn").style.display = "inline";
             }
             fixStepIndicator(n)
