--- a/bizopt/BO/templates/cardResume.html
+++ b/bizopt/BO/templates/cardResume.html
@@ -47,11 +47,9 @@
                     <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span></p> -->
                 <p class="uk-text-break uk-width-1" style="margin-top: 10px">{{ profile.description }}</p>
 
-                    <a type="submit" value="" href="/chat/{{link}}">click me {{profile.id}} {{user.id}}</a>
-
-
+                <a type="submit" class="uk-button uk-button-default" href="/chat/{{link}}">Написать</a>
             </div>
-
+            
         </div>
     </div>
     <div class="width-1 uk-text-center">
