--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -174,7 +174,7 @@
             {%for product in products %}
 
             <div>
-                <a href="creators/goods/{{ product.id }}"
+                <a href="crsearcheators/goods/{{ product.id }}"
                     class="uk-display-inline-block uk-card uk-card-body uk-card-hover uk-link-toggle uk-width-medium">
                     <img src="{{ product.picture.url }}" width="1800" height="1200" alt="">
                     <h3 class="uk-card-title uk-text-truncate">{{ product.product_name }}</h3>
