--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -227,7 +227,7 @@
             num = 2;
         }
         var xhr = new XMLHttpRequest()
-        xhr.open('GET', `becomeCreatorTemplates/${6}/`)
+        xhr.open('GET', `becomeCreatorTemplates/${num}/`)
         xhr.onload = function () {
             $('#MainWindowContainer').html(xhr.response)
         }
