--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-row">
     <h1 style="margin: auto">Заказы в работе</h1>
 
-    <a class="btn btn-primary Btnn" role="button" style="margin: auto">Создать задачу</a>
+    <!-- <a class="btn btn-primary Btnn" role="button" style="margin: auto">Создать задачу</a> -->
 </div>
 <div class="center">
 
