--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -38,7 +38,7 @@
                     <div class="col-md-12">
                         <h1 class="labels">Расскажите о себе</h1>
                         <textarea name="profile_description" maxlength="500" class="form-control"
-                            placeholder="{{ creator.description }}" value="{{ creator.description }}"></textarea>
+                            placeholder="{{ creator.description }}" value="">{{ creator.description }}</textarea>
                     </div>
                 </div>
 
