--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -60,12 +60,12 @@
                     <div class="uk-margin-small-left">
                         <label for="">от</label>
                         <br>
-                        <input class="uk-input uk-border-pill uk-margin-right" type="text" placeholder="от" style="width: 70%; background-color: #C4C4C4; color: white">
+                        <input id="from" class="uk-input uk-border-pill uk-margin-right" type="number" placeholder="от" style="width: 70%; background-color: #C4C4C4; color: white">
                         <br>
                         <br>
                         <label for="">до</label>
                         <br>
-                        <input class="uk-input uk-border-pill" type="text" placeholder="до" style="width: 70%; background-color: #C4C4C4; color: white">
+                        <input id="to" class="uk-input uk-border-pill" type="number" placeholder="до" style="width: 70%; background-color: #C4C4C4; color: white">
                     </div>
                 </div>
                 <div class="textStyleHeader textAll uk-margin-medium-bottom">
@@ -112,7 +112,7 @@
                 </div>
             </div>
             {% csrf_token %}
-            <button type="submit" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom">Применить</button>
+            <button type="button" onclick="pricevalidation()" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom">Применить</button>
         </form>
     </div>
 
@@ -123,6 +123,24 @@
 
         </div>
 </div>
+
+<script>
+    function pricevalidation(){
+        let p1 = parseInt(document.getElementById('from').value)
+        let p2 = parseInt(document.getElementById('to').value)
+        let top = Math.max(p1,p2)
+        let bottom = Math.min(p1,p2)
+        let goods_prices = document.getElementsByClassName('price')
+        for (let i = 0; i < goods_prices.length; ++i){
+            let str = parseInt(goods_prices[i].innerHTML.split(/(\s+)/)[2])
+            if (top < str || str < bottom){
+                goods_prices[i].parentElement.parentElement.parentElement.parentElement.style.cssText = 'display: none';
+            } else{
+                goods_prices[i].parentElement.parentElement.parentElement.parentElement.style.cssText = 'display: flex';
+            }
+        }
+    }
+</script>
 
 </body>
 
@@ -153,147 +171,5 @@
     }
 </style>
 <script src="js/uikit-icons.min.js"></script>
-<!--<script>-->
-<!--    $(function() {-->
-<!--        var xhr = new XMLHttpRequest()-->
-<!--        xhr.open('GET', 'baseProductCard ')-->
-<!--        xhr.onload = function() {-->
 
-<!--            console.log(xhr.response)-->
-<!--            $('#content').html(xhr.response)-->
-<!--        }-->
-<!--        xhr.send()-->
-<!--    });-->
-
-<!--    $('#showContent1').on('click', {-->
-<!--        title: 'Заголовок 1',-->
-<!--        content: 'Содержимое 1...'-->
-<!--    }, function(inBody) {-->
-
-<!--        var xhr = new XMLHttpRequest()-->
-<!--        xhr.open('GET', 'baseResumeCard')-->
-<!--        xhr.onload = function() {-->
-
-<!--            console.log(xhr.response)-->
-<!--            $('#content').html(xhr.response)-->
-<!--        }-->
-<!--        xhr.send()-->
-<!--    });-->
-
-<!--    $('#showContent2').on('click', {-->
-<!--        title: 'Заголовок 2',-->
-<!--        content: 'Содержимое 2...'-->
-<!--    }, function(inBody) {-->
-
-<!--        var xhr = new XMLHttpRequest()-->
-<!--        xhr.open('GET', 'baseProductCard')-->
-<!--        xhr.onload = function() {-->
-
-<!--            console.log(xhr.response)-->
-<!--            $('#content').html(xhr.response)-->
-<!--        }-->
-<!--        xhr.send()-->
-
-<!--    });-->
-<!--</script>-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--<body style="width: 100%; height: 100%;">-->
-
-
-<!--<h1 style="margin-left: 5%">Исполнители</h1>-->
-<!--<br>-->
-<!--<br>-->
-<!--<div style="width: 90%; height: auto; margin: auto">-->
-<!--    <div class="uk-flex uk-flex-center">-->
-<!--    {% for creator in creators %}-->
-<!--        <div>-->
-<!--            <div class="uk-card uk-card-default uk-card-body">-->
-<!--                    <div class="uk-card uk-card-default uk-card-body uk-padding-remove">-->
-<!--                        <div class="uk-flex">-->
-<!--                            <div class="uk-card uk-card-default uk-card-body" style="width: 40%; height: auto; padding: 5%" >-->
-<!--                                <img src="{{ creator.avatar }}">-->
-<!--                                <br>-->
-<!--                                <br>-->
-<!--                                <br>-->
-<!--                                <br>-->
-<!--                                <br>-->
-<!--                                <br>-->
-<!--                                <a href="cardResume" class="uk-margin-left uk-button uk-button-text uk-margin-remove button" >Подробнее</a>-->
-<!--                            </div>-->
-<!--                            <div class="uk-card uk-card-default uk-card-body uk-margin-left" style="width: 70%">-->
-<!--                                <h3 class = "uk-card-title">{{ creator.first_name }}</h3>-->
-<!--                                <p>{{ creator.description }} о себе  о себе  о себе о себе  о себе  о себе о себе  о себе  о себе</p>-->
-<!--                                <div>-->
-<!--                                    <div class="uk-flex-inline">-->
-<!--                                        <div class="">-->
-<!--                                            <p class="uk-text-default" style="color: black">Деятельность:</p>-->
-<!--                                            <p class="uk-text-small textCard">Резьба по дереву</p>-->
-<!--                                        </div>-->
-<!--                                        <div class="" style="margin-left: 32%">-->
-<!--                                            <p class="uk-text-default" style="color: black">Стоимость:</p>-->
-<!--                                            <p class="uk-text-small textCard" style="padding: 4px">от 2000 руб</p>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                    <div class="uk-flex-inline">-->
-<!--                                        <div>-->
-<!--                                            <p class="uk-text-default" style="color: black">Срок изготовления:</p>-->
-<!--                                            <p class="uk-text-small textCard">от 5 дней</p>-->
-<!--                                        </div>-->
-<!--                                        <div class="uk-margin-left">-->
-<!--                                            <p class="uk-text-default" style="color: black">Стаж работы:</p>-->
-<!--                                            <p class="uk-text-small textCard">2 года</p>-->
-<!--                                        </div>-->
-
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--            </div>-->
-<!--    {% endfor %}-->
-<!--    </div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</body>-->
-
-<!--<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>-->
-<!--<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>-->
-<!--<style>-->
-<!--    .button {-->
-<!--        width: 100%;-->
-<!--        color: white;-->
-<!--        background: #2D3995;-->
-<!--        margin: auto;-->
-<!--        border-radius: 5px;-->
-<!--        padding-top: 5%;-->
-<!--        padding-bottom: 5%;-->
-<!--    }-->
-<!--    .textCard {-->
-<!--        color: black;-->
-<!--        background: rgba(69, 101, 232, 0.34);-->
-<!--        border-radius: 5px;-->
-<!--        padding: 2px;-->
-<!--        text-align: center;-->
-<!--    }-->
-<!--</style>-->
 {% endblock %}
