--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -162,7 +162,7 @@
     <!-- Sidebar  -->
     <nav id="sidebar" style="background-color: #C4C4C4">
         <div class="sidebar-header">
-            <h3 style="color: black">BIZOPT Partners</h3>
+            <h3 style="color: black">BefFreela Partners</h3>
         </div>
 
         <ul class="list-unstyled components uk-margin-left">
