--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -206,9 +206,9 @@
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                     <!-- Content -->
                     <h6 class="text-uppercase fw-bold mb-4">
-                        <i class="fas fa-gem me-3"></i>BIZOPT
+                        <i class="fas fa-gem me-3"></i>BeFreela
                     </h6>
-                    <p>window.location.replace(...)
+                    <p>
                         Here you can use rows and columns to organize your footer content. Lorem ipsum
                         dolor sit amet, consectetur adipisicing elit.
                     </p>
@@ -266,10 +266,10 @@
                     <p><i class="fas fa-home me-3"></i> Россия, Москва</p>
                     <p>
                         <i class="fas fa-envelope me-3"></i>
-                        info@example.com
+                        degtyarevea12@gmail.com
                     </p>
-                    <p><i class="fas fa-phone me-3"></i> +7 (234) 234 56 88</p>
-                    <p><i class="fas fa-print me-3"></i> +7 (234) 234 56 89</p>
+                    <p><i class="fas fa-phone me-3"></i> +7 925 574 1371</p>
+                    <p><i class="fas fa-print me-3"></i> +7 925 574 1371</p>
                 </div>
                 <!-- Grid column -->
             </div>
@@ -281,7 +281,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
         © 2022:
-        <a class="text-reset fw-bold" href="">BizOpt</a>
+        <a class="text-reset fw-bold" href="">BeFreela</a>
     </div>
     <!-- Copyright -->
 </footer>
